openspec/changes/extend-no-std-foundation-and-wire/evidence/ui-content-discovery-std-without-global-discovery.stderr
error[E0432]: unresolved import `aspen_core::ContentDiscovery`
  --> src/main.rs:1:5
   |
 1 | use aspen_core::ContentDiscovery;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `ContentDiscovery` in the root
   |
note: found an item that was configured out
  --> $REPO_ROOT/crates/aspen-core-shell/src/lib.rs:84:18
   |
83 | #[cfg(feature = "global-discovery")]
   |       ---------------------------- the item is gated behind the `global-discovery` feature
84 | pub use context::ContentDiscovery;
   |                  ^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0432`.
error: could not compile `ui-content-discovery-std-without-global-discovery` (bin "ui-content-discovery-std-without-global-discovery") due to 1 previous error
